FINALLY A NEW UPDATE

--- a/branding.html
+++ b/branding.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Foxel | Branding</title>
+    <title>Foxel | Branding & Ocs</title>
     <link rel="shortcut icon" type="image/png" href="assets/images/logo.png">
     
       <meta charset="utf-8">
@@ -10,8 +10,8 @@
        <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="styles.css">
       <link rel="stylesheet" href="https://proicons.netlify.app/css/icons.min.css">
-      <meta property="og:title" content="Foxel | Branding" />
-      <meta property="og:image" content="https://www.thediamondk.com/assets/images/logo.png" />
+      <meta property="og:title" content="Foxel | Branding & Ocs" />
+      <meta property="og:image" content="https://www.foxel.ca/assets/images/logo.png" />
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-DGG831PPRZ"></script>
       <script>
@@ -35,8 +35,12 @@
             <a href="assets/images/branding/branding psd.zip"><h1>Click here to download my logo(s) psd files</h1></a>
             <br>
             <br>
-            <h1>Oc Refrence:</h1>
-            <img src="assets/images/branding/ocrefrence.png">
+            <h1>Ocs:</h1>
+            <h2>Basalt</h2>
+            <h3>(this is incredibly outdated lmao)</h3>
+            <img src="assets/images/branding/basalt.png">
+            <h2>Moon</h2>
+            <img src="assets/images/branding/moon.png" width="70%" height="70%">
         </body>
 
 
