--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
       <html prefix="og: https://ogp.me/ns#">
        <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="styles.css">
-      <link rel="stylesheet" href="assets/css/h-ticker.css">
-      <link rel="stylesheet" href="https://proicons.netlify.app/css/icons.min.css">
       <meta property="og:title" content="Foxel" />
-      <meta property="og:image" content="https://www.thediamondk.com/assets/images/logo.png" />
+      <meta property="og:image" content="https://www.foxel.ca/assets/images/logo.png" />
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-DGG831PPRZ"></script>
       <script>
@@ -23,20 +21,37 @@
 
         gtag('config', 'G-DGG831PPRZ');
         </script>
+</head>
+<body>
   <img class=logo src="assets/images/logo.png">
   <br>
   <br>
   <br>
 <div class="belowlogo">
-<a href="loading.html">goodies</a> |​ <a href="projects.html">projects</a> |​ <a href="aboutme.html">about me</a> |​ <a href="branding.html">branding</a> |​ <a href="https://www.youtube.com/foxelthefennic">youtube</a> |​ <a href="https://twitter.com/intent/user?user_id=1175853232029126658">twitter</a> |​ <a href="socials/discord.html">discord</a> |​ <a href="https://pronouny.xyz/u/foxelthefennic">pronoun.xyz page</a>
+<a href="loading.html">goodies</a> |​ <a href="projects.html">projects</a> |​ <a href="aboutme.html">about me</a> |​ <a href="branding.html">branding & ocs</a> |​ <a href="https://www.youtube.com/foxelthefennic">youtube</a> |​ <a href="https://twitter.com/intent/user?user_id=1175853232029126658">twitter</a> |​ <a href="socials/discord.html">discord</a>
 </div>
 <br>
-<div class="hwrap"><div class="hmove">
-  <div class="hmove">
-  <div class="hitem">New Video: <a href="https://www.youtube.com/watch?v=DtywYKYYUdg"><u>shitmin</u></a></div></div>
-</div></div>
+
+<!-- Ad Code -->
+
+<script language="JavaScript">
+  var r_text = new Array ();
+  r_text[0] = '<a href="ad/mug.html"><img src="https://cdn.discordapp.com/attachments/959612873125031937/959625196564783174/unknown.png" width=40% height=40%></a>';
+  r_text[1] = '<a href="ad/directx.html"><img src="https://cdn.discordapp.com/attachments/892578532016926791/959755312611622962/unknown.png" width=70% height=70%></a>';
+  var i = Math.floor(2*Math.random())
+  
+  document.write(r_text[i]);
+  
+  //-->
+  </script>
+
+<h6>Advertisement</h6>
 <br>
-<br>
+
+
+
+<!-- Ad Code End-->
+
 <!-- <div title="Merry Christmas BITCH!" class="event">
   <a href="https://www.youtube.com/watch?v=bXy1iiQgOAM"><img src="assets/images/index/event.gif" width="100px" height="150px"></a>
   <img src="assets/images/index/halloween clip art.png" onclick="playGif(this)" />
@@ -57,5 +72,4 @@
 <audio src="/assets/sounds/Nintendo Channel - Main Menu (Wii Rip).mp3" autoplay loop>
   <p>If you are reading this, it is because your browser does not support the audio element.</p>
   </audio>
-  </script>
-			</div><br><br>
+</body>
