--- a/loading.html
+++ b/loading.html
@@ -10,7 +10,7 @@
       <link rel="stylesheet" href="styles.css">
       <link rel="stylesheet" href="https://proicons.netlify.app/css/icons.min.css">
       <meta property="og:title" content="Goodies" />
-      <meta property="og:image" content="https://www.thediamondk.com/assets/images/goodies/WSC Icon.png" />
+      <meta property="og:image" content="https://www.foxel.ca/assets/images/goodies/WSC Icon.png" />
       <style>
         body {
           background-color: white;
