--- a/aboutme.html
+++ b/aboutme.html
@@ -11,7 +11,7 @@
       <link rel="stylesheet" href="styles.css">
       <link rel="stylesheet" href="https://proicons.netlify.app/css/icons.min.css">
       <meta property="og:title" content="Foxel | About Me" />
-      <meta property="og:image" content="https://www.thediamondk.com/assets/images/logo.png" />
+      <meta property="og:image" content="https://www.foxel.ca/assets/images/logo.png" />
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-DGG831PPRZ"></script>
       <script>
@@ -21,7 +21,7 @@
 
         gtag('config', 'G-DGG831PPRZ');
         </script>
-
+    </head>
         <body>
           <audio src="/assets/sounds/Nintendo 3DS Music - Notifications.mp3" autoplay loop>
             <p>If you are reading this, it is because your browser does not support the audio element.</p>
@@ -29,7 +29,7 @@
           <h1>about me:</h1>
 
           <h3>hello! i'm foxel/basalt! </h3>
-          <h3>i'm genderfluid (i think) person who does funny coding stuff!!!11</h3>
+          <h3>i'm genderfluid person who does funny coding stuff!!!11</h3>
           <h3><a href="https://pronouny.xyz/u/foxelthefennic"><u>pronoun.xyz page</u></a></h3>
           <h3>i'm also a minor</h3>
           <h3>i love making new friends so feel free to dm me :]</h3>
@@ -37,43 +37,13 @@
           <h3>Interests:</h3>
           <h3>Pikmin</h3>
           <h3>VrChat</h3>
-          <h3>Javascript (dear lord help my soul)</h3>
-          <h3>WiiU Modding</h3>
+          <h3>Kirby</h3>
           <br>
           <br>
           <h1>DNI</h1>
-          <h3>mcyt stans (unless its old mcyt like stampy n shit then yo cool)</h3>
           <h3>phobic of anything part of lgbtq+</h3>
           <h3>pedos (MAPs), superstraights, and zoophiles (if you are any of these see a damn therapist)</h3>
           <h3>hey pikmin enjoyers /j</h3>
-          <h3>pikmin haters /hj (unless you have a valid reason)</h3>
           <br>
           <br>
-          <h1>BYF</h1>
-          <h3>overthink sometimes</h3>
-          <h3>very self conscious about my art, or anything i like do lol</h3>
-          <h3>if i do something wrong, <i><u>please</u></i> tell me so i can improve</h3>
-          <h3>most of what i say is a joke</h3>
-          <h3>i know way too much about the pikmin series and the phineas and ferb/milo murphys law series</h3>
-          <h3>very self conscious about being annoying/pushy ; ;</h3>
-          <br>
-          <br>
-          <h1>COOL MOOTS!!!!</h1>
-          <a href="https://twitter.com/blzr_l">Blzr</a>| <3333
-          <br>
-          <a href="https://twitter.com/MoonPyro_">☆🖤OPHEEBOP🖤☆</a>| (makes cool art and also simping for one of their ocs :tro:)
-          <br>
-          <a href="https://twitter.com/Wicycool">Wicycool</a>| (cool art/animator/coder friend)
-          <br>
-          <a href="https://twitter.com/YesIAmScxpter">Scxpter</a>| (also cool art friend)
-          <br>
-          <a href="https://twitter.com/thecallmeout">CallMeOut</a>| (very cool guy please commission them)
-          <br>
-          <a href="https://twitter.com/pikminium">Pikminium (The4Pikmin)</a>| (cool countryball guy just dont mention countryhumans around him)
-          <br>
-          <h3>and ALOT more people i am too lazy to mention</h3>
-          <h5>most of these ideas were totally not stolen from <a href="https://elliotsplayland.carrd.co">OpHeeBop's carrd</a></h5>
-        </body>
-
-
-			</div>
+      </body>
