--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://proicons.netlify.app/css/icons.min.css">
   <meta property="og:title" content="Foxel | Projects" />
-  <meta property="og:image" content="https://www.thediamondk.com/assets/images/logo.png" />
+  <meta property="og:image" content="https://www.foxel.ca/assets/images/logo.png" />
 <body>
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-DGG831PPRZ"></script>
@@ -59,16 +59,6 @@
 <a href="https://discord.com/api/oauth2/authorize?client_id=848008372913176616&permissions=1024&scope=bot%20applications.commands"><h2>Click me to add the bot</h2></a>
 
 <iframe src="https://discord.com/widget?id=849072022557818891&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<img src="assets/images/projects/Fake Leak Bot.jpg" width="200" height="200">
-<h1>Fake Leak Bot (@fakeleakbot)</h1>
-<h2>Fake Leak bot is a bot that posts a randomly generated fake video game related leak every 30 minutes</h2>
-<a class="twitter-timeline" data-width="600" data-height="600" href="https://twitter.com/fakeleakbot?ref_src=twsrc%5Etfw">Tweets by fakeleakbot</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
 <br>
 <br>
 <br>
