change "discord" to "contact me"

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <br>
   <br>
 <div class="belowlogo">
-<a href="loading.html">goodies</a> |​ <a href="projects.html">projects</a> |​ <a href="aboutme.html">about me</a> |​ <a href="branding.html">branding & ocs</a> |​ <a href="https://www.youtube.com/foxelthefennic">youtube</a> |​ <a href="https://twitter.com/intent/user?user_id=1175853232029126658">twitter</a> |​ <a href="socials/discord.html">discord</a>
+<a href="loading.html">goodies</a> |​ <a href="projects.html">projects</a> |​ <a href="aboutme.html">about me</a> |​ <a href="branding.html">branding & ocs</a> |​ <a href="https://www.youtube.com/foxelthefennic">youtube</a> |​ <a href="https://twitter.com/intent/user?user_id=1175853232029126658">twitter</a> |​ <a href="contact.html">contact me</a>
 </div>
 <br>
 
