--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Foxel | Discord</title>
+    <title>Foxel | Contact Me</title>
     <link rel="shortcut icon" type="image/png" href="../assets/images/logo.png">
     
       <meta charset="utf-8">
@@ -10,7 +10,7 @@
        <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="../styles.css">
       <link rel="stylesheet" href="https://proicons.netlify.app/css/icons.min.css">
-      <meta property="og:title" content="Foxel | Discord" />
+      <meta property="og:title" content="Foxel | Contact Me" />
       <meta property="og:image" content="https://www.thediamondk.com/assets/images/logo.png" />
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-DGG831PPRZ"></script>
@@ -26,20 +26,13 @@
           <audio src="/assets/sounds/S.S. Drake - Pikmin 3.mp3" autoplay loop>
             <p>If you are reading this, it is because your browser does not support the audio element.</p>
             </audio>
-          <h1>Username:</h1>
-          <h2>basalt#1337</h2>
-          <br>
+          <h1 style="font-size: 70px;">Contact Me</h1>
+          <h1>basalt#1337</h1>
+          <a href="https://t.me/foxelthefennic"><h1>https://t.me/foxelthefennic</h1></a>
           <br>
           <br>
           <h1>Discord Server:</h1>
           <h2><a href=https://discord.gg/5qbjeYrGW9>https://discord.gg/5qbjeYrGW9</a></h2>
           <iframe src="https://discord.com/widget?id=945320979398291456&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
-          <br>
-          <br>
-          <br>
-          <h1>Pikmin Bloom! Discord Server</h1>
-          <h2>"Pikmin Bloom!" Is the <i>biggest</i> fan-made server for the mobile app "Pikmin Bloom" and has been around since the announcement of the app. The server is also official partners with the <b>r/PikminBloomApp</b> subreddit. The community is very nice and sfw, feel free to join and talk about everything pikmin!</h2>
-          <br>
-          <iframe src="https://discord.com/widget?id=826485297276911678&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
         </body>
 			</div>
